--- a/index.html
+++ b/index.html
@@ -40,11 +40,7 @@
           </div>
           <button class="btn form__btn | js-submit">Add Note</button>
         </form>
-        <ul class="notes__items | js-notes">
-          <h3 class="notes__item-title"></h3>
-          <p class="notes__item-description"></p>
-          <button class="btn notes__item-btn | js-delete">Delete</button>
-        </ul>
+        <ul class="notes__items | js-notes"></ul>
       </div>
     </section>
 
