--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <link rel="stylesheet" href="./dist/style.css" />
   </head>
   <body>
-    <header class="header">
+    <header class="header | js-header">
       <div class="header__wrapper wrapper">
         <div class="header__logo">Notes App</div>
       </div>
